--- a/Calender.html
+++ b/Calender.html
@@ -20,6 +20,7 @@
             gap: 20px;
             justify-content: center;
             align-items: center;
+            text-align: center;
             
         }
 
